--- a/pet_adoption.ipynb
+++ b/pet_adoption.ipynb
@@ -59,7 +59,7 @@
     "library(tidyverse)\n",
     "\n",
     "library(ggmap)\n",
-    "#register_google(key = 'Use Your Own Key')\n",
+    "register_google(key = 'Use Your Own Key')\n",
     "\n",
     "library(maps)\n",
     "library(maptools)\n",
