--- a/pet_adoption.ipynb
+++ b/pet_adoption.ipynb
@@ -2235,7 +2235,7 @@
     "print(\"AUC:\")\n",
     "AUC\n",
     "\n",
-    "# knn outperformes against other algorithms"
+    "# knn outperforms other algorithms"
    ]
   },
   {
