--- a/pet_adoption.ipynb
+++ b/pet_adoption.ipynb
@@ -1396,7 +1396,7 @@
    ],
    "source": [
     "# data preparation for ML algorithms\n",
-    "full2 <- mutate_at(full2, c(1, 3:8, 11:13, 17, 20), factor)\n",
+    "full2 <- mutate_at(full2, 20, factor)\n",
     "AdoptionSpeed <- full2$AdoptionSpeed\n",
     "str(full)\n",
     "\n",
